--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
     <title>Download Document</title>
+    <link rel="stylesheet" href="snunahiu.css" type="text/css">
+
 </head>
 <body>
-    <h1>Download Document</h1>
+    <h1>You're Always Welcome</h1>
     <form action="/" method="post">
-        <label for="input">Input String:</label>
+        <label for="input">OLX announcement link, please. You need to wait up to 5 min for a result.</label>
         <input type="text" name="input" id="input">
         <br><br>
         <input type="submit" value="Download">
